Prevent clipping input text in Chrome

--- a/web_src/less/_repository.less
+++ b/web_src/less/_repository.less
@@ -195,6 +195,7 @@
       border-radius: 0;
       padding: 5px 10px;
       width: 50%;
+      line-height: 1.4;
     }
 
     .clone.button {
@@ -1641,6 +1642,7 @@
         border-radius: 0;
         padding: 5px 10px;
         font-size: 1.2em;
+        line-height: 1.4;
       }
     }
   }
